### automake file for latt ###
# Process this file with automake to produce Makefile.in

bin_PROGRAMS = latt

latt_SOURCES =                 \
    basis.c                    \
    coord.c                    \
    latt.c                     \
    latt_help.c                \
    latt_parse_args.c          \
    lattice.c                